--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "build:analyze": "ANALYZE=true vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "type-check": "vue-tsc --noEmit",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
@@ -22,7 +30,6 @@
     "motion-v": "^1.7.4",
     "pinia": "^3.0.4",
     "reka-ui": "^2.6.1",
-    "rollup-plugin-visualizer": "^6.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "vaul-vue": "^0.4.1",
@@ -32,15 +39,34 @@
     "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@iconify/vue": "^5.0.0",
     "@tauri-apps/cli": "^2",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/vue": "^8.1.0",
     "@types/flubber": "^0.4.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^4.0.15",
+    "@vitest/ui": "^4.0.15",
+    "@vue/test-utils": "^2.4.6",
+    "eslint": "^9.39.1",
+    "eslint-plugin-import-x": "^4.16.1",
+    "eslint-plugin-perfectionist": "^4.15.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "eslint-plugin-unicorn": "^62.0.0",
+    "eslint-plugin-vue": "^10.6.2",
+    "eslint-plugin-vuejs-accessibility": "^2.4.1",
+    "globals": "^16.5.0",
+    "happy-dom": "^20.0.11",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.48.1",
     "vite": "^6.0.3",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vitest": "^4.0.15",
     "vue-tsc": "^2.1.10"
   }
 }
